--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# DataSource configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/heliant?useSSL=false&serverTimezone=UTC
+spring.datasource.username=duca
+spring.datasource.password=duca567
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Liquibase
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
 
