Added mechanism for secure user creation (via special key in KorisnikDTO). Created endpoint for user login. Added JWT authentication mechanism (also Roles for User and that specific field to liquibase).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,10 @@ spring.jpa.properties.hibernate.format_sql=true
 # Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
+#specialKey
+app.special.key=heliant
+
+#jwt
+app.jwtSecret=3pUlBsi4t7lhWiKXXLLaVxBGNlB2RmUHCm-hfNMwGgjUbfKx1U5J7PzmurLs1lmNOdJGGCJvdQ9CV606Vd4yKg==
+app.jwtExpirationInMs=1000000
 
