--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
+
 #specialKey
 app.special.key=heliant
 
 #jwt
-app.jwtSecret=3pUlBsi4t7lhWiKXXLLaVxBGNlB2RmUHCm-hfNMwGgjUbfKx1U5J7PzmurLs1lmNOdJGGCJvdQ9CV606Vd4yKg==
-app.jwtExpirationInMs=1000000
+app.jwtKljuc=3pUlBsi4t7lhWiKXXLLaVxBGNlB2RmUHCm-hfNMwGgjUbfKx1U5J7PzmurLs1lmNOdJGGCJvdQ9CV606Vd4yKg==
+app.jwtTrajanjeMs=1000000
 
